// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppListingTab should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to submit your app for approval, it all needs to be completed.
      </p>
      <p
        class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e1wasvgh-el-body-text"
      >
        For information on listing your app 
        <a>
          see here
        </a>
        . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
         
        <a>
          here.
        </a>
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="name"
              placeholder="The name of your app as it will appear to users"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Name
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="supportEmail"
              placeholder="Email for customers to contact you"
              type="email"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Support email
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="telephone"
              placeholder="Number for customers to contact you"
              type="text"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Telephone
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="homePage"
              placeholder="Your company homepage. HTTP:// or HTTPS://"
              type="text"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Home page
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="launchUri"
              placeholder="HTTPS or HTTP only for localhost"
              type="text"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Launch URI
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="termsAndConditionsUrl"
              placeholder="URL to link to your Terms and Conditions"
              type="text"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Terms and Conditions
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="privacyPolicyUrl"
              placeholder="URL to link to your Privacy Policy"
              type="text"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Privacy Policy
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="videoUrl1"
              placeholder="Video embed url instructing users"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Getting Started Video URL
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="videoUrl2"
              placeholder="Video embed url marketing your app"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Why Use Us Video URL
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="pricingUrl"
              placeholder="URL to link to your Pricing Info"
              type="text"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Pricing Info
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="isFree"
              type="checkbox"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              This application is free
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="deletionProtection"
              type="checkbox"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Check to prevent app from being deleted
            </label>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              App Categories
            </label>
            <div
              class="eooz7jy-el-multi-select-input-wrapper"
            >
              <input
                class="eg4njbl-el-multi-select-input"
                id="app-edit-categories-select"
                value="Mock field value"
              />
              <div
                class="e12c6sou-el-multi-select-selected"
              >
                <span
                  class="e1el4z3b-el-ml2 emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 40 40"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#0061A8"
                      height="34.1736"
                      width="19.3482"
                      x="11.1089"
                      y="2.56079"
                    />
                    <path
                      d="M24.2112 4.354H20.4706C19.9537 4.354 19.5354 4.7645 19.5354 5.27163C19.5354 5.77876 19.9537 6.18925 20.4706 6.18925H24.2112C24.728 6.18925 25.1464 5.77876 25.1464 5.27163C25.1464 4.7645 24.728 4.354 24.2112 4.354Z"
                      fill="#23A4DE"
                    />
                    <path
                      d="M28.2628 1.29517H13.3002C11.2379 1.29517 9.55957 2.94201 9.55957 4.96566V34.3296C9.55957 36.3533 11.2379 38.0001 13.3002 38.0001H28.2628C30.3251 38.0001 32.0034 36.3533 32.0034 34.3296V4.96566C32.0034 2.94201 30.3251 1.29517 28.2628 1.29517ZM30.1331 34.3296C30.1331 35.3433 29.2959 36.1649 28.2628 36.1649H13.3002C12.2672 36.1649 11.4299 35.3433 11.4299 34.3296V4.96566C11.4299 3.95197 12.2672 3.13041 13.3002 3.13041H28.2628C29.2959 3.13041 30.1331 3.95197 30.1331 4.96566V34.3296Z"
                      fill="#0061A8"
                    />
                    <path
                      d="M20.78 34.9412C21.8129 34.9412 22.6503 34.1196 22.6503 33.106C22.6503 32.0924 21.8129 31.2708 20.78 31.2708C19.747 31.2708 18.9097 32.0924 18.9097 33.106C18.9097 34.1196 19.747 34.9412 20.78 34.9412Z"
                      fill="#23A4DE"
                    />
                    <path
                      d="M17.3509 6.18925C17.8674 6.18925 18.2861 5.77842 18.2861 5.27163C18.2861 4.76484 17.8674 4.354 17.3509 4.354C16.8345 4.354 16.4158 4.76484 16.4158 5.27163C16.4158 5.77842 16.8345 6.18925 17.3509 6.18925Z"
                      fill="#23A4DE"
                    />
                    <rect
                      fill="white"
                      height="10"
                      rx="5"
                      width="23"
                      x="17"
                      y="10"
                    />
                    <g
                      clip-path="url(#clip1)"
                    >
                      <path
                        d="M37.2176 19.5746C36.9467 18.5733 35.8688 17.998 34.8684 18.4C34.6105 17.447 33.6057 16.8422 32.587 17.2044V14.7472C32.5861 12.4194 29.064 12.4158 29.0632 14.7472V23.8099C28.1718 22.9185 27.3744 22.1211 27.3724 22.1192C26.6858 21.4317 25.5673 21.4317 24.8808 22.1192C24.1946 22.8042 24.1922 23.9226 24.8808 24.6107C25.0511 24.7809 29.3682 29.0981 29.5384 29.2683C30.6477 30.3776 32.1516 31 33.7201 30.9999V31C36.9869 30.9996 39.6344 28.3521 39.6348 25.0853C39.6348 23.9107 39.6348 24.0998 39.6348 21.2075C39.6342 19.9692 38.3836 19.106 37.2176 19.5746Z"
                        fill="#FFB71B"
                      />
                    </g>
                    <path
                      d="M7 24L7 14.8485C7 14.3797 7.41997 14 7.93848 14L14.0615 14C14.58 14 15 14.3797 15 14.8485L15 24L7 24Z"
                      fill="#23A4DE"
                    />
                    <path
                      d="M1.95185 23L19.0481 23C19.8316 23 20.2786 23.8097 19.8073 24.3761L11.2597 34.6571C10.8796 35.1143 10.1209 35.1143 9.74082 34.6571L1.19267 24.3761C0.721385 23.8097 1.16844 23 1.95185 23Z"
                      fill="#7BC9EB"
                    />
                  </svg>
                </span>
                <p>
                  Please select one or more categories that best describes your app. These will be used by customers to find your app in the AppMarket
                </p>
              </div>
              <div
                class="ef7odf0-el-multi-select-un-selected"
              >
                <input
                  class="e1wdkc9j-el-multi-select-checkbox"
                  id="test-static-id"
                  type="checkbox"
                />
                <label
                  class="ehgp5gp-el-has-grey-chips e1x92nc7-el-multi-select-label"
                  for="test-static-id"
                >
                  MOCK_DESCRIPTION
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="summary"
              placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
              value="Mock field value"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Summary
            </label>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Description
          </label>
          <div />
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to submit your app for approval, it all needs to be completed.
    </p>
    <p
      class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e1wasvgh-el-body-text"
    >
      For information on listing your app 
      <a>
        see here
      </a>
      . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
       
      <a>
        here.
      </a>
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="name"
            placeholder="The name of your app as it will appear to users"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Name
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="supportEmail"
            placeholder="Email for customers to contact you"
            type="email"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Support email
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="telephone"
            placeholder="Number for customers to contact you"
            type="text"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Telephone
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="homePage"
            placeholder="Your company homepage. HTTP:// or HTTPS://"
            type="text"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Home page
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="launchUri"
            placeholder="HTTPS or HTTP only for localhost"
            type="text"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Launch URI
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="termsAndConditionsUrl"
            placeholder="URL to link to your Terms and Conditions"
            type="text"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Terms and Conditions
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="privacyPolicyUrl"
            placeholder="URL to link to your Privacy Policy"
            type="text"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Privacy Policy
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="videoUrl1"
            placeholder="Video embed url instructing users"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Getting Started Video URL
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="videoUrl2"
            placeholder="Video embed url marketing your app"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Why Use Us Video URL
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="pricingUrl"
            placeholder="URL to link to your Pricing Info"
            type="text"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Pricing Info
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="isFree"
            type="checkbox"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            This application is free
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="deletionProtection"
            type="checkbox"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Check to prevent app from being deleted
          </label>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            App Categories
          </label>
          <div
            class="eooz7jy-el-multi-select-input-wrapper"
          >
            <input
              class="eg4njbl-el-multi-select-input"
              id="app-edit-categories-select"
              value="Mock field value"
            />
            <div
              class="e12c6sou-el-multi-select-selected"
            >
              <span
                class="e1el4z3b-el-ml2 emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 40 40"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#0061A8"
                    height="34.1736"
                    width="19.3482"
                    x="11.1089"
                    y="2.56079"
                  />
                  <path
                    d="M24.2112 4.354H20.4706C19.9537 4.354 19.5354 4.7645 19.5354 5.27163C19.5354 5.77876 19.9537 6.18925 20.4706 6.18925H24.2112C24.728 6.18925 25.1464 5.77876 25.1464 5.27163C25.1464 4.7645 24.728 4.354 24.2112 4.354Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M28.2628 1.29517H13.3002C11.2379 1.29517 9.55957 2.94201 9.55957 4.96566V34.3296C9.55957 36.3533 11.2379 38.0001 13.3002 38.0001H28.2628C30.3251 38.0001 32.0034 36.3533 32.0034 34.3296V4.96566C32.0034 2.94201 30.3251 1.29517 28.2628 1.29517ZM30.1331 34.3296C30.1331 35.3433 29.2959 36.1649 28.2628 36.1649H13.3002C12.2672 36.1649 11.4299 35.3433 11.4299 34.3296V4.96566C11.4299 3.95197 12.2672 3.13041 13.3002 3.13041H28.2628C29.2959 3.13041 30.1331 3.95197 30.1331 4.96566V34.3296Z"
                    fill="#0061A8"
                  />
                  <path
                    d="M20.78 34.9412C21.8129 34.9412 22.6503 34.1196 22.6503 33.106C22.6503 32.0924 21.8129 31.2708 20.78 31.2708C19.747 31.2708 18.9097 32.0924 18.9097 33.106C18.9097 34.1196 19.747 34.9412 20.78 34.9412Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M17.3509 6.18925C17.8674 6.18925 18.2861 5.77842 18.2861 5.27163C18.2861 4.76484 17.8674 4.354 17.3509 4.354C16.8345 4.354 16.4158 4.76484 16.4158 5.27163C16.4158 5.77842 16.8345 6.18925 17.3509 6.18925Z"
                    fill="#23A4DE"
                  />
                  <rect
                    fill="white"
                    height="10"
                    rx="5"
                    width="23"
                    x="17"
                    y="10"
                  />
                  <g
                    clip-path="url(#clip1)"
                  >
                    <path
                      d="M37.2176 19.5746C36.9467 18.5733 35.8688 17.998 34.8684 18.4C34.6105 17.447 33.6057 16.8422 32.587 17.2044V14.7472C32.5861 12.4194 29.064 12.4158 29.0632 14.7472V23.8099C28.1718 22.9185 27.3744 22.1211 27.3724 22.1192C26.6858 21.4317 25.5673 21.4317 24.8808 22.1192C24.1946 22.8042 24.1922 23.9226 24.8808 24.6107C25.0511 24.7809 29.3682 29.0981 29.5384 29.2683C30.6477 30.3776 32.1516 31 33.7201 30.9999V31C36.9869 30.9996 39.6344 28.3521 39.6348 25.0853C39.6348 23.9107 39.6348 24.0998 39.6348 21.2075C39.6342 19.9692 38.3836 19.106 37.2176 19.5746Z"
                      fill="#FFB71B"
                    />
                  </g>
                  <path
                    d="M7 24L7 14.8485C7 14.3797 7.41997 14 7.93848 14L14.0615 14C14.58 14 15 14.3797 15 14.8485L15 24L7 24Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M1.95185 23L19.0481 23C19.8316 23 20.2786 23.8097 19.8073 24.3761L11.2597 34.6571C10.8796 35.1143 10.1209 35.1143 9.74082 34.6571L1.19267 24.3761C0.721385 23.8097 1.16844 23 1.95185 23Z"
                    fill="#7BC9EB"
                  />
                </svg>
              </span>
              <p>
                Please select one or more categories that best describes your app. These will be used by customers to find your app in the AppMarket
              </p>
            </div>
            <div
              class="ef7odf0-el-multi-select-un-selected"
            >
              <input
                class="e1wdkc9j-el-multi-select-checkbox"
                id="test-static-id"
                type="checkbox"
              />
              <label
                class="ehgp5gp-el-has-grey-chips e1x92nc7-el-multi-select-label"
                for="test-static-id"
              >
                MOCK_DESCRIPTION
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="summary"
            placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
            value="Mock field value"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Summary
          </label>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <label
          class="e1nbkkrq-el-label"
        >
          Description
        </label>
        <div />
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppListingTab should match a snapshot with errors and messages 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to submit your app for approval, it all needs to be completed.
      </p>
      <p
        class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e1wasvgh-el-body-text"
      >
        For information on listing your app 
        <a>
          see here
        </a>
        . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
         
        <a>
          here.
        </a>
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="name"
              placeholder="The name of your app as it will appear to users"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Name
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="supportEmail"
              placeholder="Email for customers to contact you"
              type="email"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Support email
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="telephone"
              placeholder="Number for customers to contact you"
              type="text"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Telephone
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="homePage"
              placeholder="Your company homepage. HTTP:// or HTTPS://"
              type="text"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Home page
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="launchUri"
              placeholder="HTTPS or HTTP only for localhost"
              type="text"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Launch URI
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="termsAndConditionsUrl"
              placeholder="URL to link to your Terms and Conditions"
              type="text"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Terms and Conditions
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="privacyPolicyUrl"
              placeholder="URL to link to your Privacy Policy"
              type="text"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Privacy Policy
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="videoUrl1"
              placeholder="Video embed url instructing users"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Getting Started Video URL
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="videoUrl2"
              placeholder="Video embed url marketing your app"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Why Use Us Video URL
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="pricingUrl"
              placeholder="URL to link to your Pricing Info"
              type="text"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Pricing Info
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="isFree"
              type="checkbox"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              This application is free
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="deletionProtection"
              type="checkbox"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Check to prevent app from being deleted
            </label>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              App Categories
            </label>
            <div
              class="eooz7jy-el-multi-select-input-wrapper"
            >
              <input
                class="eg4njbl-el-multi-select-input"
                id="app-edit-categories-select"
              />
              <div
                class="e12c6sou-el-multi-select-selected"
              >
                <span
                  class="e1el4z3b-el-ml2 emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 40 40"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      fill="#0061A8"
                      height="34.1736"
                      width="19.3482"
                      x="11.1089"
                      y="2.56079"
                    />
                    <path
                      d="M24.2112 4.354H20.4706C19.9537 4.354 19.5354 4.7645 19.5354 5.27163C19.5354 5.77876 19.9537 6.18925 20.4706 6.18925H24.2112C24.728 6.18925 25.1464 5.77876 25.1464 5.27163C25.1464 4.7645 24.728 4.354 24.2112 4.354Z"
                      fill="#23A4DE"
                    />
                    <path
                      d="M28.2628 1.29517H13.3002C11.2379 1.29517 9.55957 2.94201 9.55957 4.96566V34.3296C9.55957 36.3533 11.2379 38.0001 13.3002 38.0001H28.2628C30.3251 38.0001 32.0034 36.3533 32.0034 34.3296V4.96566C32.0034 2.94201 30.3251 1.29517 28.2628 1.29517ZM30.1331 34.3296C30.1331 35.3433 29.2959 36.1649 28.2628 36.1649H13.3002C12.2672 36.1649 11.4299 35.3433 11.4299 34.3296V4.96566C11.4299 3.95197 12.2672 3.13041 13.3002 3.13041H28.2628C29.2959 3.13041 30.1331 3.95197 30.1331 4.96566V34.3296Z"
                      fill="#0061A8"
                    />
                    <path
                      d="M20.78 34.9412C21.8129 34.9412 22.6503 34.1196 22.6503 33.106C22.6503 32.0924 21.8129 31.2708 20.78 31.2708C19.747 31.2708 18.9097 32.0924 18.9097 33.106C18.9097 34.1196 19.747 34.9412 20.78 34.9412Z"
                      fill="#23A4DE"
                    />
                    <path
                      d="M17.3509 6.18925C17.8674 6.18925 18.2861 5.77842 18.2861 5.27163C18.2861 4.76484 17.8674 4.354 17.3509 4.354C16.8345 4.354 16.4158 4.76484 16.4158 5.27163C16.4158 5.77842 16.8345 6.18925 17.3509 6.18925Z"
                      fill="#23A4DE"
                    />
                    <rect
                      fill="white"
                      height="10"
                      rx="5"
                      width="23"
                      x="17"
                      y="10"
                    />
                    <g
                      clip-path="url(#clip1)"
                    >
                      <path
                        d="M37.2176 19.5746C36.9467 18.5733 35.8688 17.998 34.8684 18.4C34.6105 17.447 33.6057 16.8422 32.587 17.2044V14.7472C32.5861 12.4194 29.064 12.4158 29.0632 14.7472V23.8099C28.1718 22.9185 27.3744 22.1211 27.3724 22.1192C26.6858 21.4317 25.5673 21.4317 24.8808 22.1192C24.1946 22.8042 24.1922 23.9226 24.8808 24.6107C25.0511 24.7809 29.3682 29.0981 29.5384 29.2683C30.6477 30.3776 32.1516 31 33.7201 30.9999V31C36.9869 30.9996 39.6344 28.3521 39.6348 25.0853C39.6348 23.9107 39.6348 24.0998 39.6348 21.2075C39.6342 19.9692 38.3836 19.106 37.2176 19.5746Z"
                        fill="#FFB71B"
                      />
                    </g>
                    <path
                      d="M7 24L7 14.8485C7 14.3797 7.41997 14 7.93848 14L14.0615 14C14.58 14 15 14.3797 15 14.8485L15 24L7 24Z"
                      fill="#23A4DE"
                    />
                    <path
                      d="M1.95185 23L19.0481 23C19.8316 23 20.2786 23.8097 19.8073 24.3761L11.2597 34.6571C10.8796 35.1143 10.1209 35.1143 9.74082 34.6571L1.19267 24.3761C0.721385 23.8097 1.16844 23 1.95185 23Z"
                      fill="#7BC9EB"
                    />
                  </svg>
                </span>
                <p>
                  Please select one or more categories that best describes your app. These will be used by customers to find your app in the AppMarket
                </p>
              </div>
              <div
                class="ef7odf0-el-multi-select-un-selected"
              >
                <input
                  class="e1wdkc9j-el-multi-select-checkbox"
                  id="test-static-id"
                  type="checkbox"
                />
                <label
                  class="ehgp5gp-el-has-grey-chips e1x92nc7-el-multi-select-label"
                  for="test-static-id"
                >
                  MOCK_DESCRIPTION
                </label>
              </div>
            </div>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="summary"
              placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
            />
            <span
              class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Summary
            </label>
            <p
              class="e19twfs3-el-input-error"
            >
              An Error
            </p>
          </div>
        </div>
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            Description
          </label>
          <div />
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div />
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <p
      class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
    >
      The detail included on this page populates your app listing in the AppMarket. While you are in development, you can complete this in your own time however, when you are ready to submit your app for approval, it all needs to be completed.
    </p>
    <p
      class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e1wasvgh-el-body-text"
    >
      For information on listing your app 
      <a>
        see here
      </a>
      . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
       
      <a>
        here.
      </a>
    </p>
    <div
      class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
    >
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="name"
            placeholder="The name of your app as it will appear to users"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Name
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="supportEmail"
            placeholder="Email for customers to contact you"
            type="email"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Support email
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="telephone"
            placeholder="Number for customers to contact you"
            type="text"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Telephone
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="homePage"
            placeholder="Your company homepage. HTTP:// or HTTPS://"
            type="text"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Home page
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="launchUri"
            placeholder="HTTPS or HTTP only for localhost"
            type="text"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Launch URI
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="termsAndConditionsUrl"
            placeholder="URL to link to your Terms and Conditions"
            type="text"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Terms and Conditions
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="privacyPolicyUrl"
            placeholder="URL to link to your Privacy Policy"
            type="text"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Privacy Policy
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="videoUrl1"
            placeholder="Video embed url instructing users"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Getting Started Video URL
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="videoUrl2"
            placeholder="Video embed url marketing your app"
            type="text"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Why Use Us Video URL
          </label>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="pricingUrl"
            placeholder="URL to link to your Pricing Info"
            type="text"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Pricing Info
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="isFree"
            type="checkbox"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            This application is free
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="deletionProtection"
            type="checkbox"
          />
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Check to prevent app from being deleted
          </label>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <label
            class="e1nbkkrq-el-label"
          >
            App Categories
          </label>
          <div
            class="eooz7jy-el-multi-select-input-wrapper"
          >
            <input
              class="eg4njbl-el-multi-select-input"
              id="app-edit-categories-select"
            />
            <div
              class="e12c6sou-el-multi-select-selected"
            >
              <span
                class="e1el4z3b-el-ml2 emw1q1w-el-icon-size-medium ej9yrfo-el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 40 40"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="#0061A8"
                    height="34.1736"
                    width="19.3482"
                    x="11.1089"
                    y="2.56079"
                  />
                  <path
                    d="M24.2112 4.354H20.4706C19.9537 4.354 19.5354 4.7645 19.5354 5.27163C19.5354 5.77876 19.9537 6.18925 20.4706 6.18925H24.2112C24.728 6.18925 25.1464 5.77876 25.1464 5.27163C25.1464 4.7645 24.728 4.354 24.2112 4.354Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M28.2628 1.29517H13.3002C11.2379 1.29517 9.55957 2.94201 9.55957 4.96566V34.3296C9.55957 36.3533 11.2379 38.0001 13.3002 38.0001H28.2628C30.3251 38.0001 32.0034 36.3533 32.0034 34.3296V4.96566C32.0034 2.94201 30.3251 1.29517 28.2628 1.29517ZM30.1331 34.3296C30.1331 35.3433 29.2959 36.1649 28.2628 36.1649H13.3002C12.2672 36.1649 11.4299 35.3433 11.4299 34.3296V4.96566C11.4299 3.95197 12.2672 3.13041 13.3002 3.13041H28.2628C29.2959 3.13041 30.1331 3.95197 30.1331 4.96566V34.3296Z"
                    fill="#0061A8"
                  />
                  <path
                    d="M20.78 34.9412C21.8129 34.9412 22.6503 34.1196 22.6503 33.106C22.6503 32.0924 21.8129 31.2708 20.78 31.2708C19.747 31.2708 18.9097 32.0924 18.9097 33.106C18.9097 34.1196 19.747 34.9412 20.78 34.9412Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M17.3509 6.18925C17.8674 6.18925 18.2861 5.77842 18.2861 5.27163C18.2861 4.76484 17.8674 4.354 17.3509 4.354C16.8345 4.354 16.4158 4.76484 16.4158 5.27163C16.4158 5.77842 16.8345 6.18925 17.3509 6.18925Z"
                    fill="#23A4DE"
                  />
                  <rect
                    fill="white"
                    height="10"
                    rx="5"
                    width="23"
                    x="17"
                    y="10"
                  />
                  <g
                    clip-path="url(#clip1)"
                  >
                    <path
                      d="M37.2176 19.5746C36.9467 18.5733 35.8688 17.998 34.8684 18.4C34.6105 17.447 33.6057 16.8422 32.587 17.2044V14.7472C32.5861 12.4194 29.064 12.4158 29.0632 14.7472V23.8099C28.1718 22.9185 27.3744 22.1211 27.3724 22.1192C26.6858 21.4317 25.5673 21.4317 24.8808 22.1192C24.1946 22.8042 24.1922 23.9226 24.8808 24.6107C25.0511 24.7809 29.3682 29.0981 29.5384 29.2683C30.6477 30.3776 32.1516 31 33.7201 30.9999V31C36.9869 30.9996 39.6344 28.3521 39.6348 25.0853C39.6348 23.9107 39.6348 24.0998 39.6348 21.2075C39.6342 19.9692 38.3836 19.106 37.2176 19.5746Z"
                      fill="#FFB71B"
                    />
                  </g>
                  <path
                    d="M7 24L7 14.8485C7 14.3797 7.41997 14 7.93848 14L14.0615 14C14.58 14 15 14.3797 15 14.8485L15 24L7 24Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M1.95185 23L19.0481 23C19.8316 23 20.2786 23.8097 19.8073 24.3761L11.2597 34.6571C10.8796 35.1143 10.1209 35.1143 9.74082 34.6571L1.19267 24.3761C0.721385 23.8097 1.16844 23 1.95185 23Z"
                    fill="#7BC9EB"
                  />
                </svg>
              </span>
              <p>
                Please select one or more categories that best describes your app. These will be used by customers to find your app in the AppMarket
              </p>
            </div>
            <div
              class="ef7odf0-el-multi-select-un-selected"
            >
              <input
                class="e1wdkc9j-el-multi-select-checkbox"
                id="test-static-id"
                type="checkbox"
              />
              <label
                class="ehgp5gp-el-has-grey-chips e1x92nc7-el-multi-select-label"
                for="test-static-id"
              >
                MOCK_DESCRIPTION
              </label>
            </div>
          </div>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <div
          class="e1979rmu-el-input-group"
        >
          <input
            class="e1urjlvd-el-input"
            id="test-static-id"
            name="summary"
            placeholder="A short strapline summary for your app listing. Must be between 50 and 150 characters"
          />
          <span
            class="e1vxext9-el-intent-danger ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.4192 14.0993L11.3203 10.0007L18.4182 5.90272C18.734 5.72042 18.8421 5.31666 18.6598 5.00092C18.4775 4.68519 18.0738 4.57692 17.758 4.7593L10.6596 8.85755V0.660171C10.6596 0.29558 10.364 0 9.99946 0C9.63487 0 9.33929 0.29558 9.33929 0.660171V8.85694L2.24193 4.7593C1.92619 4.57683 1.52243 4.68519 1.34013 5.00092C1.15784 5.31666 1.26602 5.72042 1.58176 5.90272L8.67965 10.0007L1.58079 14.0993C1.26505 14.2816 1.15687 14.6854 1.33916 15.0011C1.46143 15.2129 1.68333 15.3313 1.91149 15.3313C2.02354 15.3313 2.137 15.3028 2.24096 15.2427L9.33938 11.1445V19.3398C9.33938 19.7044 9.63496 20 9.99955 20C10.3641 20 10.6597 19.7044 10.6597 19.3398V11.1439L17.7591 15.2427C17.8631 15.3028 17.9766 15.3313 18.0886 15.3313C18.3167 15.3313 18.5386 15.2128 18.6609 15.0011C18.8432 14.6853 18.735 14.2816 18.4192 14.0993Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <label
            class="e1nbkkrq-el-label"
            for="test-static-id"
          >
            Summary
          </label>
          <p
            class="e19twfs3-el-input-error"
          >
            An Error
          </p>
        </div>
      </div>
      <div
        class="ep31he9-el-input-wrap-full"
      >
        <label
          class="e1nbkkrq-el-label"
        >
          Description
        </label>
        <div />
        <p
          class="e19twfs3-el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
        <p
          class="e19twfs3-el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
        <p
          class="e19twfs3-el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
        <p
          class="e19twfs3-el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
        <p
          class="e19twfs3-el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
        <p
          class="e19twfs3-el-input-error"
        >
          An Error
        </p>
      </div>
      <div
        class="e1ksxx4v-el-input-wrap"
      >
        <div />
        <p
          class="e19twfs3-el-input-error"
        >
          An Error
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
